# biblioteka-kodow-git

./: .gitignore  Programowanie.xmind  README.md  czytaj.to  mks-run-with-conda-env-py38.sh
ArjanCodes/software-designer-mindset-mk/01_mastering_the_tools/03_data_structures/: pyproject.toml
ArjanCodes/software-designer-mindset-mk/01_mastering_the_tools/03_data_structures/arrays/: basic_operations.py
ArjanCodes/software-designer-mindset-mk/01_mastering_the_tools/03_data_structures/dictionaries/: basic_operations.py  ordered.py
ArjanCodes/software-designer-mindset-mk/01_mastering_the_tools/03_data_structures/enums/: custom_attributes.py  example.py  pattern_matching.py
ArjanCodes/software-designer-mindset-mk/01_mastering_the_tools/03_data_structures/lists/: copying.py  creating_manipulating.py
ArjanCodes/software-designer-mindset-mk/01_mastering_the_tools/03_data_structures/sets/: examples.py
ArjanCodes/software-designer-mindset-mk/01_mastering_the_tools/03_data_structures/tuples/: example.py
ArjanCodes/software-designer-mindset-mk/01_mastering_the_tools/05_the_mighty_function/: callable_typing.py  callables.py  closures.py  currying.py  grouping_functions.py  is_pure.py  lambda_functions.py  not_pure.py  partial_functions.py  pure_functions.py  pyproject.toml  side_effect_to_pure.py  side_effects.py  test_side_effects.py
ArjanCodes/software-designer-mindset-mk/01_mastering_the_tools/05_the_mighty_function/exercises/classes_or_functions/: description.html  descripton.md  solution.md
conda-instalacje/: conda-usuwanie-srodowiska.md  conda-usuwanie.md
(+1042 files in other folders)
