[tool.poetry]
name = "data-strucutres"
version = "0.1.0"
description = ""
authors = ["Andreas Bergman <andreas@arjancodes.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
